@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1716] fixed server behaviour (not dying silently) when mysql database user, password or privileges change (Dmitry)
  - [ZBX-1800] updated Japanese translation; thanks to Kodai (Richlv)
  - [ZBX-1798] updated Russian translation; thanks to dotneft (Richlv)
  - [ZBX-1783] fixed problem with fixed Y axis in graphs (Aly)
